# limabean

./: .gitattributes  .gitignore  10-overview.html  20-installation.html  30-getting-started.html  40-plugins.html  50-development.html  60-differences.html  70-design-and-rationale.html  Cargo.toml  Containerfile  README.md  flake.nix  index.html  intro.html  justfile  limabean.core.filters.html  limabean.core.inventory.html  limabean.core.journal.html  limabean.core.registry.html  limabean.core.rollup.html  limabean.core.xf.html  limabean.html  limabean.user.html
.clj-kondo/: config.edn
.github/workflows/: docs.yml  release.yml  test-suite.yml
beancount-lima-booking/: Cargo.toml
clj/: CHANGELOG.md  README.md  build.clj  deps.edn  pom.xml
clj-test/: build.clj  deps.edn  pom.xml
clj-test/src/limabean/: test.clj
clj-test/src/limabean/test/: create_golden.clj
clj/doc/: 20-installation.md  30-getting-started.md  40-plugins.md  50-development.md  60-differences.md  70-design-and-rationale.md
clj/src/: limabean.clj
clj/src/beancount/plugins/: auto_accounts.clj
clj/src/lima/: cli.clj
clj/src/lima/adapter/: beanfile.clj
clj/src/lima/core/: count.clj  inventory.clj
clj/src/limabean/: app.clj  cli.clj  macros.clj  main.clj  plugin.clj  plugin_support.clj  repl.clj  spec.clj  user.clj  util.clj
clj/src/limabean/adapter/: bean_queries.clj  beanfile.clj  debug.clj  edn.clj  error.clj  exception.clj  json.clj  json_encoders.clj  loader.clj  logging.clj  plugins.clj  pod.clj  print.clj  print_methods.clj  show.clj  synthetic_spans.clj  tabulate.clj  user_clj.clj
clj/src/limabean/core/: cell.clj  filters.clj  format.clj  inventory.clj  journal.clj  register.clj  registry.clj  rollup.clj  tabulate.clj  type.clj  validation.clj  xf.clj
clj/src/limabean/plugins/bad/: throw.clj
clj/test-plugins/: deps.edn
clj/test-plugins/src/limabean/test/plugins/: adjust_postings_after_booking.clj  auto_close.clj  create_event.clj  duplicate_txns.clj  fail.clj  identity.clj  set_metadata.clj  set_narration.clj  tag_matching.clj
clj/test/limabean/: app_test.clj  golden.clj  test_support.clj  util_test.clj
clj/test/limabean/adapter/: beanfile_test.clj
clj/test/limabean/core/: inventory_test.clj
clj/test/limabean/test/plugins/: set_narration.clj
examples/beancount/: bad-plugins.beancount  booking-failure.beancount  err-plugin-unbalanced-txns.beancount  magic-money.beancount  multiple-includes-different-context.beancount  multiple-includes.beancount  plugin-auto-close.beancount  plugin-fail.beancount  provenance.beancount  small.beancount
examples/beancount/multiple-includes/: included-1.beancount  included-2.beancount
examples/clj/: deps.edn  user.clj
examples/clj/src/: user.clj
rust/: Cargo.toml
rust/beancount-lima/src/format/: edn.rs
rust/limabean/: Cargo.toml
rust/limabean-booking/: Cargo.toml
rust/limabean-booking/src/: book.rs  categorize.rs  features.rs  internal_types.rs  interpolate.rs  lib.rs  public_types.rs  reductions.rs  tolerance.rs
rust/limabean-booking/src/features/: lima_parser_types.rs  rust_decimal.rs
rust/limabean-booking/src/tests/: helpers.rs
rust/limabean/src/: book.rs  main.rs
rust/src/: api.rs
rust/src/api/: booking.rs  json_rpc.rs  plugins.rs  server.rs  types.rs
rust/src/api/booking/: accumulator.rs  loader.rs  tests.rs  types.rs
rust/src/api/plugins/: serializers.rs
rust/src/api/types/: booked.rs  booking_type_conversions.rs  from_parser_types.rs  parser_type_conversions.rs  raw.rs  serializers.rs
rust/src/api/types/raw/: from_parser_types.rs  serializers.rs
scripts.dev/: get-version.sh
test-cases/: auto-close-plugin.beancount  balance.beancount  costs-and-prices.beancount  err-parse.beancount  fail-plugin.beancount  full.beancount  implicit-prices.beancount  multi-currency-account-balance.beancount  pad.beancount  plugins.beancount  robin-hood.beancount  string-escape.beancount  tolerance.beancount  tolerance2.beancount
test-cases-pending/implicit-prices.golden/: directives.edn
test-cases/auto-accounts-plugin.golden/: raw-xf-directives.edn  raw-xf-directives.fyi.beancount
test-cases/auto-accounts.golden/: directives.edn
test-cases/balance.golden/: inventory
test-cases/costs-and-prices.golden/: directives.edn  directives.fyi.beancount
test-cases/err-parse.golden/: error.edn
test-cases/full.golden/: directives.edn  directives.fyi.beancount  inventory  journal  raw-xf-directives.edn  raw-xf-directives.fyi.beancount
test-cases/implicit-prices.golden/: directives.edn
test-cases/multi-currency-account-balance.golden/: inventory
test-cases/pad.golden/: journal
test-cases/plugins.golden/: directives.edn  directives.fyi.beancount  raw-xf-directives.edn  raw-xf-directives.fyi.beancount
test-cases/robin-hood.golden/: inventory
test-cases/set-narration-plugin-with-config.golden/: directives.edn  raw-xf-directives.edn  raw-xf-directives.fyi.beancount
test-cases/set-narration-plugin-without-config.golden/: directives.edn  raw-xf-directives.edn  raw-xf-directives.fyi.beancount
test-cases/simple.golden/: journal
test-cases/tolerance.golden/: directives.edn  directives.fyi.beancount
test-cases/trading.golden/: directives.edn  directives.fyi.beancount  inventory  journal  rollup
