[package]
name = "beancount-lima"
version = "0.5.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Crate renamed as limabean"
homepage = "https://github.com/tesujimath/limabean"
repository = "https://github.com/tesujimath/limabean"
readme = "README.md"

[badges]
maintenance = { status = "deprecated" }

[[bin]]
name = "lima"
path = "src/main.rs"

[dependencies]
abi_stable = "0.11.3"
beancount-parser-lima = "0.11.0"
# beancount-parser-lima = { version = "0.11.0-alpha.1", path = "../beancount-parser-lima" }
steel-core = "0.7.0"
steel-repl = "0.7.0"
steel-derive = "0.6.0"
# steel-core = { git = "https://github.com/mattwparas/steel" }
# steel-repl = { git = "https://github.com/mattwparas/steel" }
# steel-derive = { git = "https://github.com/mattwparas/steel" }
# steel-core = { git = "https://github.com/tesujimath/steel", branch = "struct-args-arity-warning" }
# steel-repl = { git = "https://github.com/tesujimath/steel", branch = "struct-args-arity-warning" }
# steel-derive = { git = "https://github.com/tesujimath/steel", branch = "struct-args-arity-warning" }
rust_decimal = "1.37.2"
hashbrown = "0.15.4"
time = { version = "0.3.41", features = ["parsing"] }
clap = { version = "4.5.42", features = ["derive"] }
csv = "1.3.1"
slugify = "0.1.0"
sgmlish = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
xdg = "3.0.0"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-eyre = "0.6.5"

[dev-dependencies]
test-generator = "0.3.1"

[build-dependencies]
build-deps = "0.1.4"
