[package]
name = "limabean"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beancount frontend using Rust and Clojure and the Lima parser"
homepage = "https://github.com/tesujimath/limabean"
repository = "https://github.com/tesujimath/limabean"
readme = "../README.md"

[[bin]]
name = "limabean"
path = "src/bin/limabean/main.rs"

[[bin]]
name = "limabean-pod"
path = "src/bin/limabean-pod/main.rs"

[dependencies]
limabean-booking = { version = "0.10.4", features = [
  "lima-parser-types",
  "rust-decimal",
] }
# limabean-booking = { path = "../../limabean-booking", version = "0.10.4", features = [
#   "lima-parser-types",
#   "rust-decimal",
# ] }
beancount-parser-lima = "0.16.3"
# beancount-parser-lima = { version = "0.16.3", path = "../../beancount-parser-lima" }
tabulator = { version = "0.6.0", features = [
  "bin",
  "num-bigint",
  "rust_decimal",
] }
# tabulator = { version = "0.6.0", path = "../../tabulator", features = [
#   "bin",
#   "num-bigint",
#   "rust_decimal",
# ] }
rust_decimal = { version = "1.42.0", features = [
  "serde-float",
  "serde-arbitrary-precision",
] }
hashbrown = "0.17.1"
time = { version = "0.3.47", features = [
  "local-offset",
  "formatting",
  "macros",
  "parsing",
  "serde",
] }
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
strum = "0.28.0"
strum_macros = "0.28.0"
joinery = "3.1.0"
tracing-appender = "0.2.5"
# tabulator = { path = "../../../tabulator", features = [
#   "bin",
#   "num-bigint",
#   "rust_decimal",
# ] }

[build-dependencies]
build-deps = "0.1.4"
